# flashscore-scraper-py

./: .gitignore  Makefile  README.md  join.py  pyproject.toml  scraper.py
data/clubs/africa-caf-champions-league/: 2000.csv  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018-2019.csv  2018.csv  2019-2020.csv  2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
data/clubs/africa-caf-confederation-cup/: 2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018-2019.csv  2018.csv  2019-2020.csv  2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
data/clubs/albania-abissnet-superiore/: 1998-1999.csv  1999-2000.csv  2000-2001.csv  2001-2002.csv  2002-2003.csv  2003-2004.csv  2004-2005.csv  2005-2006.csv  2006-2007.csv  2007-2008.csv  2008-2009.csv  2009-2010.csv  2010-2011.csv  2011-2012.csv  2012-2013.csv  2013-2014.csv  2014-2015.csv  2015-2016.csv  2016-2017.csv  2017-2018.csv  2018-2019.csv  2019-2020.csv  2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
data/clubs/albania-albanian-cup/: 2008-2009.csv  2009-2010.csv  2010-2011.csv  2011-2012.csv  2012-2013.csv  2013-2014.csv  2014-2015.csv  2015-2016.csv  2016-2017.csv  2017-2018.csv  2018-2019.csv  2019-2020.csv  2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
data/clubs/algeria-algeria-cup/: 2010-2011.csv  (+12 more)
(+5701 files in other folders)
